make statement cache public for use in 3rd party backend

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -64,6 +64,7 @@ r2d2 = ["diesel/r2d2"]
 bb8 = ["dep:bb8"]
 mobc = ["dep:mobc"]
 deadpool = ["dep:deadpool"]
+stmt-cache = []
 
 [[test]]
 name = "integration_tests"
